--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Area51 Coding blabla...</title>
+    <link rel="stylesheet" type="text/css" href="./CSS/index.css" />
 </head>
 
 <body>
@@ -15,7 +16,7 @@
     </header>
     <section>
         <div>
-            <h2>Students Names</h2>
+            <h1>Students Names</h1>
             <ul>
                 <li>Linus</li>
                 <li>Haji</li>
