modified index.html page, removed ul lists

--- a/index.html
+++ b/index.html
@@ -17,13 +17,8 @@
     <section>
         <div>
             <h1>Students Names</h1>
-            <ul>
-                <li>Linus</li>
-                <li>Haji</li>
-                <li>Edgar</li>
-                <li>Julius</li>
-            </ul>
-
+            <p>Atleast we have understood that coding is fun</p>
+            <h3>BOOOM!</h3>
         </div>
     </section>
     <footer>
