--- a/index.html
+++ b/index.html
@@ -10,20 +10,22 @@
 </head>
 
 <body>
-    <header>
-        <h1>Area code 51</h1>
-        <p>This is a remote Moringa class studying web development.</p>
-    </header>
-    <section>
-        <div>
-            <h1>Students Names</h1>
-            <p>Atleast we have understood that coding is fun</p>
-            <h3>BOOOM!</h3>
-        </div>
-    </section>
-    <footer>
-        <p>Copyright @ 2021</p>
-    </footer>
+    <h1>All about mangoes</h1>
+    <div class="sidebar">
+        <h2>Eating mangoes</h2>
+        <p>Mangoes are delicious! Here are some ways to enjoy them:</p>
+        <ul>
+            <li>By themselves</li>
+            <li>Smoothies</li>
+            <li>Fruit salad</li>
+            <li>With coconut rice</li>
+        </ul>
+    </div>
+    <div class="main">
+        <p>Mangoes are one of the world's favorite fruits. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+            ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+            laborum. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+    </div>
 </body>
 
 </html>
